# AutonomousDriving

Docs/templates/template_presentation/latex/: template_presentation.tex
Docs/templates/template_presentation/powerPoint/: template_presentation.potx
Docs/templates/template_report/: coverpage.tex  template.aux  template.tex
automated-driving/: README.md
automated-driving/automated-driving/: CMakeLists.txt
automated-driving/automated-driving/cpp/collision/: boundingvolume.cc  boundingvolume.h  boundingvolume_util.cc  boundingvolume_util.h  collision_checker.cc  collision_checker.h  collision_object.h  point.cc  point.h  polygon.cc  polygon.h  primitive_collision_tests.h  rectangle_aabb.cc  rectangle_aabb.h  rectangle_obb.cc  rectangle_obb.h  shape.cc  shape.h  shapegroup.cc  shapegroup.h  sphere.cc  sphere.h  timevariant_collisionobject.cc  timevariant_collisionobject.h  trajectory.cc  trajectory.h  triangle.cc  triangle.h
automated-driving/automated-driving/doc/: Makefile  conf.py  index.rst
automated-driving/automated-driving/python/fvks/geometry/: bvh.py  polyline.py  transform.py  util.py
automated-driving/automated-driving/python/fvks/planning/: planning.py  vehicle_models.py
automated-driving/automated-driving/python/fvks/scenario/: __init__.py  lanelet.py  obstacle.py  scenario.py  scenario_exception.py  traffic.py  trajectory.py
automated-driving/automated-driving/python/fvks/scenario/commonroad/: file_reader.py  file_writer.py  util.py
automated-driving/automated-driving/python/fvks/visualization/: draw_dispatch.py  planning.py  pyfvks_collision.py  scenario.py  util.py
automated-driving/automated-driving/python_binding/: CMakeLists.txt
automated-driving/automated-driving/python_binding/src/: module_collision.cpp  py_bind.cpp
automated-driving/automated-driving/tutorial/: collision_checker.ipynb  commonroad.ipynb  commonroad_solution.ipynb  optimization.ipynb  optimization_solution.ipynb  planning_task.ipynb  rrt.ipynb  rrt_solution.ipynb  scenario.ipynb  tutorial_rrt.xml  tutorial_rrt_two_vehicles.xml  vehicle_models.ipynb
automated-driving/automated-driving/tutorial/.ipynb_checkpoints/: commonroad_solution-checkpoint.ipynb
commonroad/documentation/: XML_commonRoad_XSD.xsd  XML_commonRoad_minimalExample.xml
commonroad/scenarios/NGSIM/Lankershim/: C-NGSIM_Lanker_2.xml  NGSIM_Lanker_11.xml  NGSIM_Lanker_12.xml  NGSIM_Lanker_13.xml  NGSIM_Lanker_2.xml  NGSIM_Lanker_4.xml  NGSIM_Lanker_5.xml  NGSIM_Lanker_8.xml
commonroad/vehicleModels/MATLAB/: init_KS.m  init_MB.m  init_ST.m  parameters_vehicle1.m  parameters_vehicle2.m  parameters_vehicle3.m  testVehicle.m  vehicleDynamics_KS.m  vehicleDynamics_MB.m  vehicleDynamics_ST.m
commonroad/vehicleModels/Python/: init_KS.py  init_MB.py  init_ST.py  parameters_vehicle1.py  parameters_vehicle2.py  parameters_vehicle3.py  readme.txt  testVehicle.py  tireModel.py  vehicleDynamics_KS.py  vehicleDynamics_MB.py  vehicleDynamics_ST.py  vehicleParameters.py
traj_planner/Docs/templates/template_folderStructure/LastNames/: id_LastNames.txt
traj_planner/Docs/templates/template_report/: coverpage.tex  template.aux  template.tex
traj_planner/Docs/templates/template_report/images/: newcollision.xcf
traj_planner/OneRoadTestEnv/: OneRoad.xml  OneRoad2.xml  OneRoadObs.xml  Untitled.ipynb  Untitled1.ipynb  collision_model_bertha.py  commonroadobstacle_test.py  constraints.py  distance.py  drivearea.py  drivearea_test.py  oneroad.copy.py  oneroad.py  optimization_test.py  optimizer.py  otimization_test.py~  rrt.py  rrt_trejactory.p  some_other_library.py  trajectory.p  trajectory.py  visualization.py
traj_planner/OneRoadTestEnv/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
traj_planner/OneRoadTestEnv/bertha/: bertha.py
traj_planner/OneRoadTestEnv/bertha/environment/: collision_model_bertha.py  constants.py  drivearea.py  egovehicle.py  obstacle.py
traj_planner/OneRoadTestEnv/bertha/environment/vehicle/: vehicle.py
traj_planner/OneRoadTestEnv/bertha/helpers/: constraintcomponents.py  costcomponents.py  distance.py  helpermethods.py  initialguess.py  some.txt
traj_planner/OneRoadTestEnv/bertha/optimization/boundary/: boundary.py  scipyboundary.py
traj_planner/OneRoadTestEnv/bertha/optimization/constraint/: constraint.py  constraintholder.py
traj_planner/OneRoadTestEnv/bertha/optimization/optimizer/: optimizer.py  problem.py
traj_planner/docs/: Presentation_Praktikum.odp
traj_planner/scenarios/NGSIM/Lankershim/: C-NGSIM_Lanker_1.xml  NGSIM_Lanker_1.xml  NGSIM_Lanker_10.xml  NGSIM_Lanker_3.xml  NGSIM_Lanker_6.xml  NGSIM_Lanker_7.xml
traj_planner/scenarios/hand-crafted/: GER_B471_1a.xml  GER_Ffb_1b.xml  GER_Muc_3a.xml
traj_planner/test/: distanceUnitTest.py
